server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: tarokk
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: app
  type: ClusterIP
